--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 
-
 <body> 
     <header> 
         <div> 
@@ -32,9 +31,7 @@
 
         <section id="about"> 
             <h2>О нас</h2> 
-            <p>Мы компания, которая занимается созданием качественных веб-решений.
-</p>
-
+            <p>Мы компания, которая занимается созданием качественных веб-решений.</p>
         </section> 
 
         <section id="services"> 
@@ -50,8 +47,7 @@
             <h2>Контакты</h2> 
             <p>Email: info@example.com</p> 
             <p>Телефон: +7 (123) 456-78-90</p> 
-        </section> 
-
+        </section>
     </main> 
 
     <footer> 
